--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
 /node_modules
+
 /packages/*/node_modules
-package-lock.json
-/packages/*/package-lock.json
-/.tmp/
 /packages/*/.tmp/
+/packages/*/package-lock.json
 /packages/*/LICENSE
-.vscode/
+
 .idea/
+.tmp/
+.vscode/
 *.log
 *.cache
-.nyc_output
 coverage
+package-lock.json
+.nyc_output
