--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "@mutual8/m8-toolbox-monorepo",
   "license": "AGPL-3.0-or-later",
   "private": true,
+  "scripts": {
+    "tsc": "tsc"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
     "@babel/preset-typescript": "^7.1.0",
     "lerna": "^3.10.5",
     "typescript": "^3.2.2"
