--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-typescript": "^7.1.0",
+    "@typescript-eslint/eslint-plugin": "^1.0.0",
+    "@typescript-eslint/parser": "^1.0.0",
+    "eslint": "^5.12.1",
     "lerna": "^3.10.6",
     "typescript": "^3.2.4"
   }
