--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@typescript-eslint/parser": "^1.5.0",
     "eslint": "^5.15.3",
+    "husky": "^1.3.1",
     "lerna": "^3.13.1",
     "typescript": "^3.4.1"
   }
