--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@typescript-eslint/parser": "^1.5.0",
     "eslint": "^5.15.3",
+    "eslint-config-prettier": "^4.1.0",
     "husky": "^1.3.1",
     "lerna": "^3.13.1",
+    "prettier": "^1.16.4",
     "typescript": "^3.4.1"
   }
 }
