--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "private": true,
   "license": "AGPL-3.0-or-later",
   "scripts": {
-    "tsc": "tsc"
+    "build": "lerna run build",
+    "bootstrap": "lerna bootstrap",
+    "postinstall": "npm run bootstrap",
+    "type-check": "tsc"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
@@ -10,11 +13,14 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/node": "^11.12.1",
+    "@types/prettier": "^1.16.1",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@typescript-eslint/parser": "^1.5.0",
     "eslint": "^5.15.3",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "husky": "^1.3.1",
     "lerna": "^3.13.1",
     "prettier": "^1.16.4",
