--- a/packages/cli-logger/package.json
+++ b/packages/cli-logger/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@mutual8/m8-console",
+  "name": "@mutual8/cli-logger",
   "version": "0.0.1",
-  "homepage": "https://github.com/mutual8/toolbox/tree/master/packages/m8-console#readme",
+  "homepage": "https://github.com/mutual8/toolbox/tree/master/packages/cli-logger#readme",
   "license": "AGPL-3.0-or-later",
   "files": [
     "lib"
@@ -21,7 +21,14 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.4.0",
     "@types/node": "^11.12.1",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-typescript": "^7.3.3",
+    "rimraf": "^2.6.3",
     "typescript": "^3.4.1"
   },
   "dependencies": {}
