--- a/packages/cli-logger/package.json
+++ b/packages/cli-logger/package.json
@@ -16,8 +16,11 @@
   "bugs": {
     "url": "https://github.com/mutual8/toolbox/issues"
   },
-  "types": "types/index.d.ts",
+  "types": "lib/index.d.ts",
   "scripts": {
+    "build": "babel -d ./lib -x \".ts,.js\" --delete-dir-on-start ./src",
+    "build:typeDefs": "tsc --noEmit false --allowJs false --emitDeclarationOnly -d --declarationDir ./lib --isolatedModules false",
+    "prepublishOnly": "npm run build && npm run build:typeDefs",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "devDependencies": {
@@ -31,5 +34,7 @@
     "rimraf": "^2.6.3",
     "typescript": "^3.4.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "chalk": "^2.4.2"
+  }
 }
