--- a/package.json
+++ b/package.json
@@ -2,27 +2,45 @@
   "private": true,
   "license": "AGPL-3.0-or-later",
   "scripts": {
-    "build": "lerna run build",
+    "clean": "lerna clean",
     "bootstrap": "lerna bootstrap",
-    "postinstall": "npm run bootstrap",
-    "type-check": "tsc"
+    "update": "npm up && npm run clean && npm run bootstrap",
+    "postinstall": "npm run bootstrap"
+  },
+  "jest": {
+    "rootDir": "packages"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write"
+    ],
+    "*.jsx": [
+      "prettier --write"
+    ],
+    "*.ts": [
+      "prettier --write"
+    ],
+    "*.tsx": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/node": "^11.12.1",
-    "@types/prettier": "^1.16.1",
+    "@types/jest": "^24.0.11",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@typescript-eslint/parser": "^1.5.0",
-    "eslint": "^5.15.3",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.16.0",
     "husky": "^1.3.1",
+    "jest": "^24.6.0",
     "lerna": "^3.13.1",
+    "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
     "typescript": "^3.4.1"
   }
