--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,10 @@
     // Enable strictest settings like strictNullChecks & noImplicitAny.
     "strict": true,
     // Disallow features that require cross-file information for emit.
-    "isolatedModules": true,
+    "isolatedModules": false,
     // Import non-ES modules as default imports.
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+    "types": ["jest", "node"]
+  },
+  "exclude": ["node_modules"]
 }
