--- a/packages/cli-logger/package.json
+++ b/packages/cli-logger/package.json
@@ -18,21 +18,10 @@
   },
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "babel -d ./lib -x \".ts,.js\" --delete-dir-on-start ./src",
-    "build:typeDefs": "tsc --noEmit false --allowJs false --emitDeclarationOnly -d --declarationDir ./lib --isolatedModules false",
+    "build": "../../node_modules/.bin/babel -d ./lib -x \".ts,.js\" --delete-dir-on-start ./src",
+    "build:typeDefs": "../../node_modules/.bin/tsc --noEmit false --allowJs false --emitDeclarationOnly -d --declarationDir ./lib --isolatedModules false",
     "prepublishOnly": "npm run build && npm run build:typeDefs",
     "test": "echo \"Error: run tests from root\" && exit 1"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.4.0",
-    "@types/node": "^11.12.1",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/preset-typescript": "^7.3.3",
-    "rimraf": "^2.6.3",
-    "typescript": "^3.4.1"
   },
   "dependencies": {
     "chalk": "^2.4.2"
