--- a/package.json
+++ b/package.json
@@ -4,22 +4,9 @@
   "scripts": {
     "build": "lerna run build",
     "bootstrap": "lerna bootstrap --hoist",
-    "pretest": "npm run bootstrap && npm run build",
-    "test": "jest --coverage --verbose"
-  },
-  "jest": {
-    "rootDir": "/",
-    "testMatch": [
-      "**/packages/src/**/*.spec.ts"
-    ],
-    "collectCoverageFrom": [
-      "**/packages/src/**/*.ts",
-      "!**/node_modules/**"
-    ],
-    "coverageDirectory": "<rootDir>/coverage",
-    "coverageReporters": [
-      "lcov"
-    ]
+    "coverage": "jest --coverage --verbose",
+    "postinstall": "npm run bootstrap",
+    "test": "jest"
   },
   "lint-staged": {
     "*.js": [
@@ -57,6 +44,7 @@
     "eslint-plugin-import": "^2.16.0",
     "husky": "^1.3.1",
     "jest": "^24.6.0",
+    "jest-mock-console": "^0.4.2",
     "lerna": "^3.13.1",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
