--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "lerna run build",
     "bootstrap": "lerna bootstrap --hoist",
-    "coverage": "jest --coverage --verbose",
+    "coverage": "jest --coverage --verbose --coverageReporters=text-lcov | coveralls",
     "postinstall": "npm run bootstrap",
     "test": "jest"
   },
@@ -38,6 +38,7 @@
     "@types/node": "^11.12.1",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@typescript-eslint/parser": "^1.5.0",
+    "coveralls": "^3.0.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.1.0",
