--- a/packages/cli-logger/package.json
+++ b/packages/cli-logger/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@mutual8/cli-logger",
+  "description": "Provides an enhanced JavaScript console for the command line.",
   "version": "1.0.0",
   "homepage": "https://github.com/mutual8/toolbox/tree/master/packages/cli-logger#readme",
   "license": "AGPL-3.0-or-later",
