--- a/packages/server-cli/package.json
+++ b/packages/server-cli/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@mutual8/server-cli",
+  "description": "Provides commands to manage your Mutual 8 server from the command line.",
   "version": "0.0.0",
   "homepage": "https://github.com/mutual8/toolbox/tree/master/packages/server-cli#readme",
   "license": "AGPL-3.0-or-later",
