--- a/packages/cli-logger/package.json
+++ b/packages/cli-logger/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "homepage": "https://github.com/mutual8/toolbox/tree/master/packages/cli-logger#readme",
   "license": "AGPL-3.0-or-later",
+  "main": "lib/index.js",
   "files": [
     "lib"
   ],
