--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "scripts": {
     "build": "lerna run build",
     "bootstrap": "lerna bootstrap --hoist",
-    "coverage": "jest --coverage --verbose --coverageReporters=text-lcov | coveralls",
+    "coverage": "jest --coverage",
+    "coverage:report": "npm run coverage -- --verbose --coverageReporters=text-lcov | coveralls",
     "postinstall": "npm run bootstrap",
-    "test": "jest"
+    "test": "jest",
+    "watch": "jest --watch"
   },
   "lint-staged": {
     "*.js": [
@@ -28,25 +30,26 @@
     }
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.4.0",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.12.1",
-    "@typescript-eslint/eslint-plugin": "^1.5.0",
-    "@typescript-eslint/parser": "^1.5.0",
+    "@types/yargs": "^13.0.0",
+    "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "@typescript-eslint/parser": "^1.6.0",
     "coveralls": "^3.0.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.16.0",
     "husky": "^1.3.1",
-    "jest": "^24.6.0",
+    "jest": "^24.7.1",
     "jest-mock-console": "^0.4.2",
-    "lerna": "^3.13.1",
+    "lerna": "^3.13.2",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
     "typescript": "^3.4.1"
