--- a/packages/app-cli/tsconfig.json
+++ b/packages/app-cli/tsconfig.json
@@ -4,5 +4,5 @@
     "noImplicitAny": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
