--- a/packages/cli-logger/package.json
+++ b/packages/cli-logger/package.json
@@ -21,10 +21,10 @@
   },
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "npm run build:lib && npm run build:typeDefs",
-    "build:lib": "../../node_modules/.bin/babel -d ./lib -x \".ts,.js\" --ignore \"**/*.spec.ts\" --delete-dir-on-start ./src",
-    "build:typeDefs": "../../node_modules/.bin/tsc --noEmit false --allowJs false --emitDeclarationOnly -d --declarationDir ./lib --isolatedModules false",
-    "prepublishOnly": "npm run build",
+    "build": "yarn build:lib && yarn build:typeDefs",
+    "build:lib": "babel -d ./lib -x \".ts,.js\" --ignore \"**/*.spec.ts\" --delete-dir-on-start ./src",
+    "build:typeDefs": "tsc --noEmit false --allowJs false --emitDeclarationOnly -d --declarationDir ./lib --isolatedModules false",
+    "prepublishOnly": "yarn build",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
