--- a/packages/webpack-helpers/package.json
+++ b/packages/webpack-helpers/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mutual8/webpack-helpers",
   "description": "Provides webpack helpers for Mutual 8 apps.",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "homepage": "https://github.com/mutual8/toolbox/tree/master/packages/webpack-helpers",
   "license": "AGPL-3.0-or-later",
   "main": "lib/index.js",
@@ -28,11 +28,7 @@
   "peerDependencies": {
     "webpack": "^4.31.0"
   },
-  "devDependencies": {
-    "webpack": "^4.31.0"
-  },
   "dependencies": {
-    "@types/webpack": "^4.4.29",
-    "mini-css-extract-plugin": "^0.6.0"
+    "@types/webpack": "^4.4.29"
   }
 }
